[package]
name = "dhcparse"
version = "1.0.0"
authors = ["Axel Forsman <axelsfor@gmail.com>"]
edition = "2021"
description = "A zero-copy DHCPv4 parser"
homepage = "https://github.com/axelf4/dhcparse"
repository = "https://github.com/axelf4/dhcparse"
license = "Apache-2.0"
keywords = ["dhcp"]
categories = ["network-programming", "no-std", "parser-implementations"]

[features]
default = ["std"]
std = ["byteorder/std", "memchr/std"]

[dependencies]
byteorder = { version = "1.4", default-features = false }
bitflags = "1.3"
memchr = { version = "2.4", default-features = false }
ref-cast = "1.0"
